fix map picker scrollbar offset caused by --cell-size property location change

--- a/src/styles/MapPicker.scss
+++ b/src/styles/MapPicker.scss
@@ -1,11 +1,19 @@
 @use 'MainMenu' as *;
 
 .map-picker {
+  scroll-margin-inline: 1em;
+
+  scrollbar-color: darkgrey rgba(0, 0, 0, 0.3);
+
   &::-webkit-scrollbar {
     width: .5em;
 
     &-track {
       box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+
+      &-piece {
+        background-color: black;
+      }
     }
 
     &-thumb {
